Still more :a => :b --> a: :b changes

--- a/app/views/customers/_transactions.html.haml
+++ b/app/views/customers/_transactions.html.haml
@@ -1,5 +1,5 @@
 -#header
-  .row-fluid.line.leaf
+  .row-fluid.line.precious
     .badge.span2= "?"
     .text.span7= "When, What and by Whom?"
     .subtext.span3= "Gredits"
