--- a/app/views/faq/_aboutus.html.haml
+++ b/app/views/faq/_aboutus.html.haml
@@ -6,7 +6,7 @@
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#au', :toggle => 'collapse' }, href: '#au-2' }
+          %a.accordion-toggle{ data: { parent: '#au', toggle: 'collapse' }, href: '#au-2' }
             Abhinav Chaturvedi, Co-founder
         .accordion-body.collapse{ id: 'au-2' }
           .accordion-inner
@@ -25,7 +25,7 @@
               He is also good at racquet sports.
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#au', :toggle => 'collapse' }, href: '#au-3' }
+          %a.accordion-toggle{ data: { parent: '#au', toggle: 'collapse' }, href: '#au-3' }
             Akshay Damarla, Co-founder
         .accordion-body.collapse{ id: 'au-3' }
           .accordion-inner
