--- a/app/views/faq/_general.html.haml
+++ b/app/views/faq/_general.html.haml
@@ -6,7 +6,7 @@
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-1' }
+          %a.accordion-toggle{ data: { parent: '#gn', toggle: 'collapse' }, href: '#gn-1' }
             Grading is tedious work. So why is Gradians doing it? 
         .accordion-body.collapse{ id: 'gn-1' }
           .accordion-inner
@@ -31,7 +31,7 @@
               If we can do that in classrooms around the world, then we would have done good
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-2' }
+          %a.accordion-toggle{ data: { parent: '#gn', toggle: 'collapse' }, href: '#gn-2' }
             What subjects do you cover?
         .accordion-body.collapse{ id: 'gn-2' }
           .accordion-inner
@@ -47,7 +47,7 @@
 
       -#
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#gn', :toggle => 'collapse' }, href: '#gn-4' }
+          %a.accordion-toggle{ data: { parent: '#gn', toggle: 'collapse' }, href: '#gn-4' }
         .accordion-body.collapse{ id: 'gn-4' }
           .accordion-inner
 
