--- a/app/views/faq/_grading.html.haml
+++ b/app/views/faq/_grading.html.haml
@@ -6,7 +6,7 @@
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#fgr', :toggle => 'collapse' }, href: '#fgr-2' }
+          %a.accordion-toggle{ data: { parent: '#fgr', toggle: 'collapse' }, href: '#fgr-2' }
             I know my students and I grade accordingly. Why should I trust your grading?
         .accordion-body.collapse{ id: 'fgr-2' }
           .accordion-inner
@@ -24,7 +24,7 @@
               sound in one place is mathematically sound everywhere else too
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#fgr', :toggle => 'collapse' }, href: '#fgr-3' }
+          %a.accordion-toggle{ data: { parent: '#fgr', toggle: 'collapse' }, href: '#fgr-3' }
             Who does the grading?
         .accordion-body.collapse{ id: 'fgr-3' }
           .accordion-inner
@@ -33,7 +33,7 @@
             studied advanced maths and science at university level
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#fgr', :toggle => 'collapse' }, href: '#fgr-4' }
+          %a.accordion-toggle{ data: { parent: '#fgr', toggle: 'collapse' }, href: '#fgr-4' }
             Do your graders give marks?
         .accordion-body.collapse{ id: 'fgr-4' }
           .accordion-inner
@@ -43,7 +43,7 @@
             of who the graders were
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#fgr', :toggle => 'collapse' }, href: '#fgr-5' }
+          %a.accordion-toggle{ data: { parent: '#fgr', toggle: 'collapse' }, href: '#fgr-5' }
             How long would it take to grade an assigment?
         .accordion-body.collapse{ id: 'fgr-5' }
           .accordion-inner
