--- a/app/views/faq/_website.html.haml
+++ b/app/views/faq/_website.html.haml
@@ -6,7 +6,7 @@
       .accordion-group
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-1' }
+          %a.accordion-toggle{ data: { parent: '#wb', toggle: 'collapse' }, href: '#wb-1' }
             What is a Quiz?
         .accordion-body.collapse{ id: 'wb-1' }
           .accordion-inner
@@ -23,7 +23,7 @@
               you could use the same quiz to make worksheets for that year's batch
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-2' }
+          %a.accordion-toggle{ data: { parent: '#wb', toggle: 'collapse' }, href: '#wb-2' }
             What is a Worksheet?
         .accordion-body.collapse{ id: 'wb-2' }
           .accordion-inner
@@ -36,7 +36,7 @@
               has made uptil now and then selects students she wants to make worksheets for
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-3' }
+          %a.accordion-toggle{ data: { parent: '#wb', toggle: 'collapse' }, href: '#wb-3' }
             What is a Group?
         .accordion-body.collapse{ id: 'wb-3' }
           .accordion-inner
@@ -52,7 +52,7 @@
               Please note that one student can belong to more than group
 
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-5' }
+          %a.accordion-toggle{ data: { parent: '#wb', toggle: 'collapse' }, href: '#wb-5' }
             I am making a quiz and it will take a few minutes for the PDF to get ready. Do I have 
             stay logged-in for all that time and wait?
         .accordion-body.collapse{ id: 'wb-5' }
@@ -70,7 +70,7 @@
 
       -#
         .accordion-heading
-          %a.accordion-toggle{ data: { :parent => '#wb', :toggle => 'collapse' }, href: '#wb-1' }
+          %a.accordion-toggle{ data: { parent: '#wb', toggle: 'collapse' }, href: '#wb-1' }
         .accordion-body.collapse{ id: 'wb-1' }
           .accordion-inner
 
