--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -68,7 +68,7 @@
   %body 
     = render partial: 'toolbox/generic/spinner'
     .container-fluid 
-      #control-panel.g-panel.row-fluid{ :marker => "#{user.id}" } 
+      #control-panel.g-panel.row-fluid{ marker: "#{user.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
