--- a/app/views/layouts/guardians.html.haml
+++ b/app/views/layouts/guardians.html.haml
@@ -54,7 +54,7 @@
     #spinner.spinner
       = image_tag "loading.gif", id: 'img-spinner'
     .container-fluid 
-      #control-panel.g-panel.row-fluid{ :marker => "#{guardian.id}" } 
+      #control-panel.g-panel.row-fluid{ marker: "#{guardian.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
