--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -100,7 +100,7 @@
   %body 
     = render partial: 'toolbox/generic/spinner'
     .container-fluid.hidden
-      #control-panel.g-panel.row-fluid{ :marker => "#{t.id}" } 
+      #control-panel.g-panel.row-fluid{ marker: "#{t.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
