--- a/app/views/teachers/uni/_rc.html.haml
+++ b/app/views/teachers/uni/_rc.html.haml
@@ -17,6 +17,6 @@
       .pull-right
         = simple_link for: 'Download', id: 'lnk-rc-download',
           class: 'btn btn-inverse', 
-          url: { :self => "ws/report_card?id=:a&format=csv" }
+          url: { self: "ws/report_card?id=:a&format=csv" }
   #pane-tc-rc-3.tab-pane
 
