--- a/app/views/toolbox/generic/_line.html.haml
+++ b/app/views/toolbox/generic/_line.html.haml
@@ -8,7 +8,7 @@
 -# A single line entry - with mandatory text and optional subtext 
 .row-fluid.line.leaf
   .dropdown
-    %a.dropdown-toggle{ href: '#', data: { :toggle => :dropdown } } 
+    %a.dropdown-toggle{ href: '#', data: { toggle: :dropdown } } 
       %span.caret
   .badge
   .text
