--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -66,7 +66,7 @@
   %body 
     = render partial: 'toolbox/generic/spinner'
     .container-fluid.hidden
-      #control-panel.g-panel.row-fluid{ :marker => "#{student.id}" } 
+      #control-panel.g-panel.row-fluid{ marker: "#{student.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
