--- a/app/views/teachers/uni/_exb-sektions.html.haml
+++ b/app/views/teachers/uni/_exb-sektions.html.haml
@@ -4,7 +4,7 @@
 
 -# Left-side tabs - one per section
 #exb-2.tabbable.tabs-left
-  %ul.nav.nav-tabs.span3{ id: 'exb-ul-milestone-2' }
+  %ul.nav.nav-tabs.span3{ id: 'exb-ul-milestone-2', data: { onepane: :true } }
     - active_sk.each_with_index do |m,j|
       %li
         = simple_link for: "#{m.name}", marker: "#{m.id}", href: '#exb-sektions', id: "tab-exb-sk-#{m.id}"
