--- a/app/views/students/_main.html.haml
+++ b/app/views/students/_main.html.haml
@@ -7,7 +7,7 @@
   %li
     = simple_link for: "Graded", id: 'tab-st-rc-1', href: "#pane-st-rc-1"
   %li
-    = simple_link icon: 'icon-search', id: 'tab-st-rc-2', href: "#pane-st-rc-2"
+    = simple_link icon: 'icon-search', id: 'tab-st-rc-2', href: "#pane-st-rc-2", reload: true
 
 .tab-content
   #pane-st-inbox.tab-pane
