--- a/app/views/teachers/shared/_qzb.html.haml
+++ b/app/views/teachers/shared/_qzb.html.haml
@@ -2,8 +2,7 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link for: 'Topics', href: '#pane-qzb-1', 
-      id: 'tab-qzb-1', class: 'nopurge-on-inactive nopurge-on-show'
+    = simple_link for: 'Topics', href: '#pane-qzb-1', id: 'tab-qzb-1'
   %li
     = simple_link for: 'Questions', href: '#pane-qzb-2', id: 'tab-qzb-2'
 
