--- a/app/views/toolbox/rubric/_buttons.html.haml
+++ b/app/views/toolbox/rubric/_buttons.html.haml
@@ -1,5 +1,5 @@
 
-.row-fluid.navbar{ id: 'rubric-standard-btns' }
+.row-fluid.navbar.precious{ id: 'rubric-standard-btns' }
   .btn-group.pull-right
     = simple_button karo: :solution, for: 'Solution', class: 'small-text btn-inverse btn'
     = simple_button karo: :regrade, for: 'Regrade', class: 'small-text btn-inverse btn'
