--- a/app/views/teachers/uni/_deepdive.html.haml
+++ b/app/views/teachers/uni/_deepdive.html.haml
@@ -3,11 +3,9 @@
   %li
     = simple_link for: "Group", id: "tab-dive-1", href: '#pane-dive-1'
   %li
-    = simple_link for: "By Topic", id: "tab-dive-2",
-      href: '#pane-dive-2', class: 'nopurge-ever'
+    = simple_link for: "By Topic", id: "tab-dive-2", href: '#pane-dive-2'
   %li
-    = simple_link for: "By Student", id: "tab-dive-3",
-      href: '#pane-dive-3', class: 'nopurge-ever'
+    = simple_link for: "By Student", id: "tab-dive-3", href: '#pane-dive-3'
 
 .tab-content
   #pane-dive-1.tab-pane
