--- a/app/views/toolbox/grading/left/_pending.html.haml
+++ b/app/views/toolbox/grading/left/_pending.html.haml
@@ -3,12 +3,11 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link for: (sandboxed ? 'Sandbox' : 'Exams'), id: 'tab-grd-exams', href: "#pane-grd-exams", 
-    class: (sandboxed ? 'nopurge-ever' : nil)
+    = simple_link for: (sandboxed ? 'Sandbox' : 'Exams'), id: 'tab-grd-exams', href: "#pane-grd-exams"
   %li
     = simple_link for: "Questions", id: 'tab-grd-questions', href: '#pane-grd-questions'
   %li
-    = simple_link for: 'Grade', id: 'tab-grd-panel', href: '#pane-grd-panel', class: 'nopurge-ever'
+    = simple_link for: 'Grade', id: 'tab-grd-panel', href: '#pane-grd-panel'
 
 .tab-content
   #pane-grd-exams.tab-pane.purge-blind
