--- a/app/views/topics/_selector.html.haml
+++ b/app/views/topics/_selector.html.haml
@@ -1,13 +1,14 @@
 
-- purge = onepane ? true : false 
+- reload = onepane ? true : false 
+- show_pings = (context == :tag || context == :audit ) ? false : true 
 
 %div.tabbable.tabs-left{ id: "#{context}-verticals" }
-  %ul.nav.nav-tabs.span4{ id: "ul-#{context}", class: ( purge ? 'purge-blind lock' : 'purge-skip' )  }
+  %ul.nav.nav-tabs.span4{ id: "ul-#{context}", data: { ping: "#{show_pings}" } } 
     - Vertical.all.each do |m|
       %li{ marker: "#{m.id}" }
         = simple_link for: "#{m.name}", toggle: :tab, id: "tab-#{context}-#{m.id}",
         href: "#{ onepane ? "##{context}-common-pane" : "##{context}-#{m.id}" }",
-        url: { self: "vertical/topics.json?id=:id&context=#{context}" }
+        url: { self: "vertical/topics.json?id=:id&context=#{context}" }, reload: reload
 
   .tab-content.span7{ id: "#{context}-topics" }
     - if onepane 
