Further rationalization/simplification of tab behaviour
A <ul> can have the following data-* attributes
  1. ping
  2. lock
  3. solo

--- a/app/views/examiners/_audit.html.haml
+++ b/app/views/examiners/_audit.html.haml
@@ -22,5 +22,5 @@
         = simple_link for: "Audit", class: 'btn btn-inverse', id: 'lnk-audit-form'
   #pane-audit-2.tab-pane
   #pane-audit-3.tab-pane
-    = render partial: 'topics/selector', locals: { context: :audit, onepane: true }
+    = render partial: 'topics/selector', locals: { context: :addhints, onepane: true }
   #pane-audit-4.tab-pane
