--- a/app/views/teachers/uni/_edit-sektion.html.haml
+++ b/app/views/teachers/uni/_edit-sektion.html.haml
@@ -7,7 +7,7 @@
       - if current_account.mimics_admin
         %button.btn.btn-primary.btn-primary{ type: :submit, id: 'btn-add-phone' }= "Add Phone #s"
     .row-fluid.push-down
-      .column.span4.purge-blind.multi-select
-      .column.span4.purge-blind.multi-select
-      .column.span4.purge-blind.multi-select
+      .column.span4.multi-select
+      .column.span4.multi-select
+      .column.span4.multi-select
 
