--- a/app/views/toolbox/grading/left/_pending.html.haml
+++ b/app/views/toolbox/grading/left/_pending.html.haml
@@ -10,7 +10,7 @@
     = simple_link for: 'Grade', id: 'tab-grd-panel', href: '#pane-grd-panel'
 
 .tab-content
-  #pane-grd-exams.tab-pane.purge-blind
-  #pane-grd-questions.tab-pane.purge-blind
-  #pane-grd-panel.tab-pane.precious
+  #pane-grd-exams.tab-pane
+  #pane-grd-questions.tab-pane
+  #pane-grd-panel.tab-pane
     = render partial: 'toolbox/grading/left/rubric'
