--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -28,7 +28,7 @@
         -#= render partial: 'modals/customer/refund', locals: { customer: customer }
 
 - control_panel = [ {for: 'Assignments', id: 'a-st-main'},
-                    {for: 'Lessons', id: 'a-courses' },
+                    {for: 'Lessons', id: 'a-courses', class: (current_account.mimics_admin ? nil : 'hidden' )},
                     {for: 'Enroll', id: 'lnk-enroll-self'},
                     {for: "Hello, #{student.first_name}", id: 'm-account'} ]
 
@@ -74,7 +74,7 @@
                 = image_tag "logo-mit-beta-2.png"
               %ul.nav.span8.pull-right
                 - for l in control_panel 
-                  %li.dropdown 
+                  %li{ class: ( l[:class].blank? ? 'dropdown' : 'dropdown hidden' ) } 
                     = simple_link for: l[:for], id: l[:id], icon: l[:icon]
 
       #desktop.row-fluid
