Initial commit of ability to add hints (max. 3) for a question subpart ...
Hints should be version-agnostic and preferably predominantly TeX

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -575,7 +575,13 @@ span.btn-shortcut {
     } 
 
     select { font-size: 11px; }
-    input:not([type='submit']) { font-size: 14px ; }
+    input:not([type='submit']) { 
+      font-size: 14px ;
+      &.kompact { 
+        font-size: 11px ;
+        padding: 3px ; 
+      } 
+    }
 
     input[type='file'] {
       font-size: 11px ;
