--- a/app/views/menus/shared/_per-question.html.haml
+++ b/app/views/menus/shared/_per-question.html.haml
@@ -8,4 +8,4 @@
     = simple_link for: 'Report issue(s)', id: 'lnk-audit-question', icon: 'icon-warning-sign'
   - if current_account.loggable_type == 'Examiner'
     %li
-      = simple_link for: 'Add Hints', id: 'a-add-hints', icon: 'icon-gift'
+      = simple_link for: 'Add Hints', id: 'a-hints', icon: 'icon-gift'
