Minor edits. Mentioning our respective eyesights

--- a/app/views/modals/guest/_founders.html.haml
+++ b/app/views/modals/guest/_founders.html.haml
@@ -19,18 +19,22 @@
         industry, developing software design tools for semiconductor firms. 
         His first computer was Sinclair's ZX Spectrum. He is still holding on to it, 
         even though he now programs on his laptop. 
-      .contact.email
-        %span.orange= 'Email'
-        %span= 'abhinav@gradians.com'
-      .contact.phone
-        %span.orange= 'Phone'
-        %span= '+91-98186.91751'
-      .contact.sport
-        %span.orange= 'Plays'
-        %span= 'Squash'
-      .contact.sportsperson
-        %span.orange= 'Favourite Sportsperson'
-        %span= 'Amr Shabana (EGY)'
+      .personal.push-down
+        .email
+          %span.orange= 'Email'
+          %span= 'abhinav@gradians.com'
+        .phone
+          %span.orange= 'Phone'
+          %span= '+91-98186.91751'
+        .sport
+          %span.orange= 'Plays'
+          %span= 'Squash'
+        .sportsperson
+          %span.orange= 'Favourite Sportsperson'
+          %span= 'Amr Shabana (EGY)'
+        .eyesight
+          %span.orange= 'Eyesight'
+          %span= '-5.5'
     .span1
       = image_tag 'founders/akshay-53705.png'
     .span4
@@ -48,15 +52,19 @@
       %div
         He shares Abhinav's passion for elegant Software systems 
         and also for sports.
-      .contact.email
-        %span.orange= 'Email'
-        %span= 'akshay@gradians.com'
-      .contact.phone
-        %span.orange= 'Phone'
-        %span= '+91-95829.67528'
-      .contact.sport
-        %span.orange= 'Plays'
-        %span= 'Tennis'
-      .contact.sportsperson
-        %span.orange= 'Favourite Sportsperson'
-        %span= 'Roger Federer (SUI)'
+      .personal.push-down
+        .email
+          %span.orange= 'Email'
+          %span= 'akshay@gradians.com'
+        .phone
+          %span.orange= 'Phone'
+          %span= '+91-95829.67528'
+        .sport
+          %span.orange= 'Plays'
+          %span= 'Tennis'
+        .sportsperson
+          %span.orange= 'Favourite Sportsperson'
+          %span= 'Roger Federer (SUI)'
+        .eyesight
+          %span.orange= 'Eyesight'
+          %span= 'Perfect'
