Eyesight is normal - not perfect

--- a/app/views/modals/guest/_founders.html.haml
+++ b/app/views/modals/guest/_founders.html.haml
@@ -67,4 +67,4 @@
           %span= 'Roger Federer (SUI)'
         .eyesight
           %span.orange= 'Eyesight'
-          %span= 'Perfect'
+          %span= 'Normal'
