--- a/app/views/menus/examiner/_workbench.html.haml
+++ b/app/views/menus/examiner/_workbench.html.haml
@@ -32,6 +32,8 @@
         = simple_link for: 'Receive Scans', id: 'lnk-wb-receive', icon: 'icon-download'
     - if admin
       %li
+        = simple_link for: 'Prob. of the Day', id: 'lnk-add-puzzle', icon: 'icon-question-sign'
+      %li
         = simple_link for: 'Add Topics', id: 'lnk-mng-topics', icon: 'icon-plus-sign'
       %li
         = simple_link for: 'Add Examiner', id: 'lnk-add-examiner', icon: 'icon-user'
